# prediksi-pembatalan-kamar

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  REQUIREMENTS.txt  app (1).py  app.py  model_cancel.pkl  pyproject.toml  requirements.txt  scaler.pkl  tasks.ps1
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: config.yaml
notebooks/: 01_eda.ipynb  colab_quickstart.ipynb
src/hotel_cancel/: config.py  data.py  demo.py  evaluate.py  features.py  model.py  predict.py  train.py
tests/: conftest.py  test_data.py  test_demo.py  test_features.py  test_model_predict.py
